History of this buildout
========================

6.0.15 (unreleased)
-------------------

- Nothing changed yet.


6.0.14 (2016-05-18)
-------------------

- MINA-143: when Event is past, still show the agenda.  [maurits]

- Updated icons in catalog metadata.  Old brains were still pointing
  to .gif files instead of .png files.  [maurits]

- MINA-136: Reverse sort referencebrowserwidget on effective date.
  This is our new default.  Set the sort order explicitly in some
  fields, especially sorting on sortable title for contact persons.
  [maurits]

- Removed patch for project reference field and instead configured the
  widget properly.  [maurits]

- MINA-138 since flexbox only works on chrome android 49+ we remove flexbox css on touch device
  smaller then 768px.
  [lhuiskes]


6.0.13 (2016-04-19)
-------------------

- Products.PloneHotfix20160419 1.0.  [maurits]

- Set white background on @@register page.
  [lhuiskes]


6.0.12 (2016-04-18)
-------------------

- Add temporary transitions to the project workflow
  [diederik]

- Sort related items by reverse chronological order
  [diederik]


6.0.11 (2016-04-12)
-------------------

- MINA-137 various improvements, typo's and minor changes in displaying
  tiles.  [jladage]


- Sort the references in the referencesbrowserwidget reversed.  So
  make sure the most recently added item is shown first.  Issue
  MINA-136.  [maurits]



6.0.10 (2016-04-06)
-------------------

- Treat mailchimp as a one-time popup.  Do not look for a form in it
  to submit inline with ajax, as this has the side effect of
  swallowing the statusmessage cookie.  MINA-135.  [maurits]

- Enabled plonepopupforms.js in an upgrade step.  Needed to close the
  mailchimp popup after a success.  MINA-135.  [maurits]


6.0.9 (2016-04-06)
------------------

- Use PyPDF2 to generate PDF files for meetings.  Replace existing PDF
  if it is not from this new version.  This fixes a possible eternal