@@ -4,7 +4,8 @@ History of this buildout
 6.0.15 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- MINA-147: Move advisory when linked project gets a new theme.  We
+  also do this for all projects in an upgrade step.  [maurits]
 
 
 6.0.14 (2016-05-18)
